assets/styles/home.scss
//////////////////////////////////////////////////////////////////////
// homepage styles
// -----
// Copyright (c) Kiruse 2021. Licensed under GPL-3.0
@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital@0;1&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
@import "colors.scss";
@import "media.scss";

$navbar-height: 60px;
$project-gradient-odd:  linear-gradient(to left,  rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.2));
$project-gradient-even: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.2));

html, body {
  margin: 0;
  padding: 0;
  color: white;
  font-family: Urbanist, sans-serif;
  font-weight: 300;
  @include media-medium() {font-size: 1.1em}
  @include media-phone()  {text-align: justify}
}

#omega {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: 240px;
  
  @include media-mobile() {
    width: 100vw;
    min-height: 100vh;
  }
  @include media-desktop() {
    width: 100%;
    margin-top: $navbar-height;
  }
  
  > div {
    margin-bottom: 100px;
    @include media-mobile()  {width: 100%}
    @include media-desktop() {width: 1000px}
    
    > h1 {
      text-align: center;
      font-weight: 300;
      font-variant: small-caps;
      font-size: 2.6em;
    }
  }
}

#navbar {
  position: fixed;
  left: 0;
  right: 0;
  @include media-mobile()  {bottom: 0}
  @include media-desktop() {top: 0}
  z-index: 999;
  
  display: flex;
  flex-direction: row;
  align-items: center;
  height: $navbar-height;
  background: $color-base-dark;
  color: white;
  padding: 0 20px;
  
  .logo {
    @include media-mobile() {display: none;}
    height: 60%;
    margin-right: 20px;
  }
  
  a, a:link, a:active, a:visited {
    flex: 1;
    font-family: sans-serif;
    font-style: normal;
    text-decoration: none;
    color: inherit;
    height: 100%;
    line-height: 60px;
    text-align: center;
  }
  a:hover {
    text-decoration: underline;
  }
  a.down {
    background: rgba(255, 255, 255, 10%);
  }
}

#omega > #home {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image: url(/assets/img/jumbotron.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  margin: 0;
  
  @include media-mobile()  {height: 100%}
  @include media-desktop() {height: 600px}
}

#jumbotron {
  position: relative;
  @include media-mobile()  {width: 100%;}
  @include media-desktop() {width: 1000px;}
  height: 100%;
  
  @include media-mobile() {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  h1, h2 {
    display: block;
  }
  h2 span {
    display: inline-block;
  }
}

body[data-page=home] #jumbotron {
  h1 {
    font-size: 4rem;
    font-style: italic;
    
    @include media-desktop() {
      position: absolute;
      top: 100px;
      left: 60px;
    }
  }
  h2 {
    font-size: 1.4rem;
    color: $color-base-vibrant;
    
    @include media-desktop() {
      position: absolute;
      top: 170px;
      left: 220px;
    }
    @include media-mobile() {
      margin: 20px 0 40px;
    }
    
    span {
      position: relative;
      margin: 0 10px;
      color: $color-highlight;
      font-weight: 100;
    }
  }
  
  .logo {
    @include media-mobile() {
      margin-top: 40px;
      width: 50%;
      max-width: 190px;
    }
    @include media-desktop() {
      position: absolute;
      top: 57px;
      left: 10px;
      width: 256px;
    }
  }
}

#omega > #about {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  padding: 40px 0;
  margin: 0;
  @include media-medium() {background-image: linear-gradient(rgba(0, 0, 0, 60%), rgba(0, 0, 0, 60%)), url('/assets/img/grid-lg.svg')}
  @include media-phone()  {background-image: linear-gradient(rgba(0, 0, 0, 60%), rgba(0, 0, 0, 60%)), url('/assets/img/grid-sm.svg')}
  background-position: 10pt;
}

#omega > #projects {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: black;
  padding: 60pt 0 0 0;
  margin: 0;
  
  > .content {
    padding-bottom: 40pt;
  }
  
  > .project {
    align-self: stretch;
    background-repeat: no-repeat;
    background-position-x: center;
    
    > .gradient {
      display: flex;
      flex-direction: column;
      align-items: center;
      
      > .inner {
        display: flex;
        flex-direction: column;
        @include media-desktop() {
          width: 1000px;
          padding: 60pt 0;
        }
        @include media-mobile() {
          width: 100%;
          padding: 30pt 0;
        }
        
        > .content {
          @include media-desktop() {width: 600px}
          @include media-mobile()  {padding: 4pt 10pt}
          
          h2 {
            font-style: italic;
            @include media-medium() {padding: 0 60pt}
            @include media-phone()  {text-align: center}
          }
          
          a.projref {
            display: block;
            padding: 4pt 30pt;
            &::before {
              content: '→ ';
            }
          }
        }
      }
    }
    
    .gradient {
      background: $project-gradient-even;
    }
    
    @include media-medium() {
      &:nth-child(odd) {
        > .gradient > .inner {
          align-items: flex-end;
          > .content {
            text-align: right;
          }
        }
        
        .gradient {
          background: $project-gradient-odd;
        }
      }
    }
  }
  
  #project-kirudev {
    background-image: url('/assets/img/projects/kirudev.png');
  }
  #project-penumbra {
    background-image: url('/assets/img/projects/penumbra.png');
    background-size: cover;
  }
  #project-parfact {
    background-image: url('/assets/img/projects/parfact.png');
    background-size: cover;
  }
  #project-vpe {
    background-color: rgb(70, 27, 90);
    background-image: url('/assets/img/projects/vpe.png');
  }
  #project-pia {
    background-color: #4b97b4;
    background-image: url('/assets/img/projects/pia.png');
    background-size: cover;
  }
}

#omega > #clients {
  background: #b9b9b9;
  padding-bottom: 60pt;
  margin: 0;
  
  h1 {
    margin-bottom: 10pt;
  }
  
  .inner {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 10pt;
    @include media-desktop() {gap: 30pt}
  }
}

#omega > #contact {
  background: #150b1b;
  margin: 0;
  
  h1 {
    margin-bottom: 20px;
  }
  
  > .inner {
    display: flex;
    @include media-phone()  {flex-direction: column}
    @include media-medium() {flex-direction: row}
    justify-content: center;
    align-items: center;
    gap: 20px;
    
    > div {
      display: flex;
      flex-direction: column;
      align-items: center;
      margin-bottom: 1em;
    }
    
    #contact-email {
      form {
        display: none;
      }
      table {
        border: none;
      }
      table td {
        padding: 4px;
      }
      textarea {
        box-sizing: border-box;
        width: 100%;
        height: 10em;
      }
    }
    
    #contact-ids {
      .inner {
        display: flex;
        flex-direction: column;
        align-items: center;
      }
      
      table {
        border: none;
      }
      table td {
        padding: 4px;
      }
    }
    
    .card {
      padding: 4pt;
    }
  }
}

#omega > .fullspan {
  align-self: stretch;
  width: auto;
  padding: 10pt;
}

#omega > * > .content {
  padding: 10px;
  @include media-desktop() {width: 1000px}
}

.qrcode canvas {
  display: none;
}

#omega > #footer {
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 0;
  @include media-mobile()  {padding: 10px}
  @include media-desktop() {padding: 30px}
  
  background: $color-base-darkest;
  
  #copyright {
    width: 100%;
    text-align: center;
    font-size: 0.8rem;
  }
  
  .inner {
    display: flex;
    @include media-mobile() {
      flex-direction: column;
      align-items: stretch;
    }
    @include media-desktop() {
      flex-direction: row;
      align-items: center;
    }
  }
}


@mixin alert-theme($background, $darker: darken($background, 20%)) {
  background-color: $background;
  border-color: $darker;
  
  > .title {
    border-color: $darker;
    color: $darker;
    
    a.close {
      color: $darker;
      &:hover {
        color: darken($darker, 10%);
      }
    }
  }
  
  > .body {
    color: $darker;
  }
}

#alerts {
  position: fixed;
  top: $navbar-height + 10px;
  right: 10px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  font-size: 1rem;
  z-index: 1000;
  
  > .alert {
    display: block;
    border: 2px solid;
    border-radius: 4pt;
    margin-bottom: 10pt;
    
    @include media-medium() {
      min-width: 250px;
      max-width: 400px;
    }
    @include media-phone() {
      width: 90vw;
    }
    
    > .title {
      border-bottom: 1px solid;
      padding: 2pt;
      a.close {
        float: right;
        text-decoration: none;
        font-style: normal;
        font-weight: 500;
        margin: 0 4pt;
      }
    }
    > .body {
      padding: 4pt 2pt;
    }
    
    &.success {
      @include alert-theme(#b5ecb5, #24cc24);
    }
    &.info {
      @include alert-theme(#9ecbff, #1e6cc5);
    }
    &.warn {
      @include alert-theme(#fbe2c7, #a56d32);
    }
    &.error {
      @include alert-theme(#e7b9c2, #a93f54);
    }
  }
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7);
}
.spinner {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 4px;
  
  .spinner-dot {
    width: 10px;
    height: 10px;
    background-color: #0ff;
    border-radius: 2pt;
  }
}


h1, h2, h3, h4, h5, h6 {
  font-family: Atkinson Hyperlegible, sans-serif;
  margin: 0;
  padding: 0;
  color: #C96949;
}

span {
  color: $color-highlight;
}

a, a:link, a:visited, a:active {
  color: $color-highlight;
  text-decoration: underline;
  font-style: italic;
  font-weight: 100;
}
a:hover {
  color: lighten($color-highlight, 10%);
}

input, textarea {
  display: block;
  border: none;
  border-radius: 2px;
  font: inherit;
  
  &:focus {
    outline: none;
    box-shadow: 0 0 2pt 1pt $color-highlight;
  }
}
button {
  box-sizing: border-box;
  width: 100%;
  background-color: $color-base-vibrant;
  font: inherit;
  font-style: italic;
  border-radius: 2px;
  border: 1px solid $color-base-vibrant;
  color: white;
  
  &.down {
    background-color: darken($color-base-vibrant, 10%);
    border-style: inset;
  }
}

#freelance-jobs {
  display: none;
}

